update blurred image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>eMigr8.AI</title>
   <meta name="description"
     content="eMigr8 Tech Visa - Tech enabled Visa opportunity for relocation and settlement to countries like UK , US, Canada, France , Germany and many more. Become globally attractive, join eMigr8 Community">
+  <meta property="og:image" content="" />
   <meta name="keywords" content="eMigr8visa, Tech enabled Visa opportunity">
 
   <!-- Favicons -->
@@ -363,15 +364,15 @@
             <div class="me-2">
               <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
                 target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-play1.png" alt="download for android"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-play.png" alt="download for android"></a>
             </div>
             <div class="me-2">
               <a href="https://apps.apple.com/ng/app/emigr8-tech-visa/id6480083188" target="_blank">
-                <img width="102px" height="30px" class="mb-3" src="./assets/img/new-download-apple (1).png" alt="download for ios"></a>
+                <img width="102px" height="30px" class="mb-3" src="./assets/img/download-apple.png" alt="download for ios"></a>
             </div>
             <div class="me-2">
               <a href="https://app.emigr8visa.com" target="_blank">
-                <img width="102px" height="30px" src="./assets/img/Download for web (2).png" alt="download for web"> </a>
+                <img width="102px" height="30px" src="./assets/img/download-web.png" alt="download for web"> </a>
             </div>
           </div>
         </div>
