update startNow link & footer

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p>Become a Globally Attractive Talent and Unlock Your Full Potential.</p>
             <div class="d-flex buttons-div">
               <div>
-                <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
+                <a href="https://bit.ly/emigr8app_emigr8ai_guest"
                   target="_blank" class="btn-get-started">Start Now</a>
               </div>
               <div>
@@ -327,7 +327,7 @@
             <h3>The Future of Talent is Global</h3>
             <p class="mb-5"> eMigr8 is your key to navigating the rapidly evolving global talent landscape.
             </p>
-            <a class="cta-btn align-self-start" href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
+            <a class="cta-btn align-self-start" href="https://bit.ly/emigr8app_emigr8ai_guest"
                   target="_blank" aria-label="To sign up">Start Now</a>
           </div>
 
@@ -383,6 +383,9 @@
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href=" https://www.bincom.net/emigr8openday" target="_blank">Attend eMigr8 Open Day</a></li>
             <li class="nav-item mb-2"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Gq9O9SzhNZK_8dZxoSZJTjaJ42Zld77kbXxD8EoHGqRNuQ/viewform" target="_blank"> Take an Eligibility Test</a></li>
+            <li class="nav-item mb-2"><a
+            href="#" id="dynamic-download"
+            target="_blank"> Download the app</a></li>
           </ul>
 
         </div>
