added pricing page and edit navbar

--- a/index.html
+++ b/index.html
@@ -41,8 +41,23 @@
       </div>
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#">For Talents</a></li>
-          <li><a href="#">For Partners</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
+          <li class="dropdown"><a href="#">For Talents <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href=" https://www.bincom.net/emigr8openday" target="_blank">Attend eMigr8 Open Day</a></li>
+              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Gq9O9SzhNZK_8dZxoSZJTjaJ42Zld77kbXxD8EoHGqRNuQ/viewform"
+                target="_blank"> Take an Eligibility Test</a></li>
+              <li><a href="#" id="dynamic-download" target="_blank"> Download the app</a></li>
+            </ul>
+          
+          </li>
+
+          <li class="dropdown"><a href="#">For Partners <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Become a Coach</a></li>
+              
+            </ul>
+          </li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
