--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@
     <title>eMigr8.AI</title>
     <meta name="description"
         content="eMigr8 Tech Visa - Tech enabled Visa opportunity for relocation and settlement to countries like UK , US, Canada, France , Germany and many more. Become globally attractive, join eMigr8 Community">
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://techvisa.emigr8visa.com/img/emigr8appAd.jpeg" />
     <meta name="keywords" content="eMigr8visa, Tech enabled Visa opportunity">
 
     <!-- Favicons -->
@@ -18,14 +18,246 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
 
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
+
 <body>
-    <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
-    <stripe-pricing-table pricing-table-id="prctbl_1QfAvBATkueRmeRz4wJZzF3w"
-        publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
-    </stripe-pricing-table>
+    <header id="header" class="header d-flex align-items-center fixed-top">
+        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+            <div>
+
+                <a href="index.html" class="logo" aria-label="Go to Homepage">
+
+                    <img src="assets/img/logo-down1.png" alt="Logo" width="129px" height="67px">
+
+                </a>
+            </div>
+            <nav id="navmenu" class="navmenu">
+                <ul>
+                    <!-- <li><a href="pricing.html">Pricing</a></li> -->
+                    <li class="dropdown"><a href="#">For Talents
+                            <!--<i class="bi bi-chevron-down toggle-dropdown"></i> --></a>
+                        <!-- <ul>
+                  <li><a href=" https://www.bincom.net/emigr8openday" target="_blank">Attend eMigr8 Open Day</a></li>
+                  <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSd6Gq9O9SzhNZK_8dZxoSZJTjaJ42Zld77kbXxD8EoHGqRNuQ/viewform"
+                    target="_blank"> Take an Eligibility Test</a></li>
+                  <li><a href="#" id="dynamic-download" target="_blank"> Download the app</a></li>
+                  <li><a href="https://bincom.co.uk/emigr8techvisalandscape/" target="_blank">Tech Visa Landscape</a></li>
+                </ul> -->
+
+                    </li>
+
+                    <li class="dropdown"><a href="#">For Partners
+                            <!--<i class="bi bi-chevron-down toggle-dropdown"></i> --></a>
+                        <!-- <ul>
+                  <li><a href="#">Become a Coach</a></li>
+                  
+                </ul> -->
+                    </li>
+                </ul>
+                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
+
+        </div>
+    </header>
+
+    <main class="main">
+
+        <section id="pricing" class="pricing section">
+
+            <div class="container title title-pricing" data-aos="fade-up">
+                <h5>Pricing</h5>
+                <h2>Unlock Your Potential with Flexible Pricing</h2>
+                <p>Choose the plan that fits your journey, and gain access to exclusive resources</p>
+            </div>
+            <div class="script-box">
+                <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+                <stripe-pricing-table pricing-table-id="prctbl_1QfAvBATkueRmeRz4wJZzF3w"
+                    publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
+                </stripe-pricing-table>
+            </div>
+            <div class="discover">
+                <h3>Explore additional plans</h3>
+                <p>Whether you're just exploring or ready to take the next step, we have a plan that fits you.</p>
+                <a href="https://bincom.co.uk/emigr8pricing/" target="_blank" aria-label="See all plans"
+                    class="btn-discover">See all plans</a>
+            </div>
+        </section>
+    </main>
+
+    <footer id="footer" class="footer">
+
+        <div class="container">
+
+            <div class="row gy-4 py-2 mb-3 border-bottom">
+                <div class="col-lg-4  col-md-12 mb-3">
+                    <a href="#hero" class="d-flex align-items-center mb-3  link-body-emphasis text-decoration-none"
+                        aria-label="Go to Homepage">
+                        <div class="logo">
+                            <img src="assets/img/logo3.png" alt="Our Logo" width="129px" height="63.49px">
+                        </div>
+                    </a>
+                    <p class="footer-tagline">Empowering talent, globally</p>
+                    <div class="d-flex flex-wrap mt-3 mb-sm-3">
+                        <div class="me-1">
+                            <a href="https://play.google.com/store/apps/details?id=com.bincom.emigr8app&amp;pcampaignid=web_share&amp;pli=1"
+                                target="_blank">
+                                <img width="100px" height="30px" class="mb-3" src="./assets/img/download-play.png"
+                                    alt="download for android"></a>
+                        </div>
+                        <div class="me-2">
+                            <a href="https://apps.apple.com/ng/app/emigr8-tech-visa/id6480083188" target="_blank">
+                                <img width="100px" height="30px" class="mb-3" src="./assets/img/download-apple.png"
+                                    alt="download for ios"></a>
+                        </div>
+                        <div class="me-2">
+                            <a href="https://app.emigr8visa.com" target="_blank">
+                                <img width="100px" height="30px" src="./assets/img/download-web.png"
+                                    alt="download for web">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-2  col-md-12">
+                    <h5>Talents</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href=" https://www.bincom.net/emigr8openday" target="_blank">Attend
+                                eMigr8 Open Day</a></li>
+                        <li class="nav-item mb-2"><a
+                                href="https://docs.google.com/forms/d/e/1FAIpQLSd6Gq9O9SzhNZK_8dZxoSZJTjaJ42Zld77kbXxD8EoHGqRNuQ/viewform"
+                                target="_blank"> Take an Eligibility Test</a></li>
+                        <li class="nav-item mb-2"><a href="#" id="dynamic-download" target="_blank"> Download the
+                                app</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="pricing.html">Pricing</a></li>
+                    </ul>
+
+                </div>
+
+                <div class="col-lg-2  col-md-12">
+                    <h5>Partners</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#">Become a Coach</a></li>
+                        <li class="nav-item mb-2"><a href="#">Become a Partner</a></li>
+                        <li class="nav-item mb-2"><a href="#">Give Benefit to your Team</a></li>
+                    </ul>
+
+                </div>
+
+                <div class="col-lg-2  col-md-12">
+                    <h5>Products</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="https://bincom.co.uk/emigr8techvisalandscape/"
+                                target="_blank" class="p-0 ">Tech Visa Landscape</a></li>
+                        <li class="nav-item mb-2"><a href="https://emigr8visa.com/" target="_blank" class=" p-0">eMigr8
+                                Tech
+                                Visa</a></li>
+                    </ul>
+
+                </div>
+
+                <div class=" col-lg-2 col-6 col-md-12">
+                    <h5>Contact Us</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2">
+                            Bincom Global, Scope Argyle House, 29-31, Euston Road, London NW1 2SD
+                        </li>
+                        <li class="nav-item mb-2">
+                            +234 809 889 9883
+                        </li>
+                        <li class="nav-item mb-2">
+                            +44 7859 946409
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="justify-content-between containe footer-bottom">
+                <div class="row d-flex justify-content-between">
+                    <div class="copyright justify-content-start col-lg-6 ">
+                        <a href="https://dev.emigr8.bincom.net/privacy-policy" style="color: white;" class="policy">
+                            <p>Privacy Policy</p>
+                        </a>
+                        <p class="ms-2">© 2024 eMigr8 <span class="p-2"> All Rights Reserved.</span> </p>
+                    </div>
+
+
+                    <div class="social-links d-flex justify-content-en col-lg-6">
+                        <a href="https://bincom.net/emigr8communityfacebook" target="_blank"
+                            aria-label="Go to our Facebook page">
+                            <div class="social-icon">
+                                <img src="./assets/img/iconoir_facebook.png" alt="facebook icon" width="16.64px"
+                                    height="16.64px">
+                            </div>
+                        </a>
+                        <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
+                        <a href="https://bincom.net/emigr8communitylinkedin" target="_blank"
+                            aria-label="Go to our Linkedin page">
+                            <div class="social-icon">
+                                <img src="./assets/img/basil_linkedin-outline.png" alt="linkedin icon" width="16.64px"
+                                    height="16.64px">
+                            </div>
+                        </a>
+                        <a href="https://bincom.net/emigr8communitytwitter" target="_blank"
+                            aria-label="Go to our Twitter page">
+                            <div class="social-icon">
+                                <img src="./assets/img/ri_twitter-x-line.png" alt="twitter icon" width="16.64px"
+                                    height="16.64px">
+                            </div>
+                        </a>
+                        <a href="https://www.youtube.com/@emigr8community" target="_blank"
+                            aria-label="Go to our Youtube page">
+                            <div class="social-icon">
+                                <img src="./assets/img/mingcute_youtube-line.png" alt="youtube icon" width="16.64px"
+                                    height="16.64px">
+                            </div>
+                        </a>
+                        <a href="https://bincom.net/emigr8community" target="_blank"
+                            aria-label="Go to our Telegram page">
+                            <div class="social-icon">
+                                <img src="./assets/img/iconoir_telegram.png" alt="telegram icon" width="16.64px"
+                                    height="16.64px">
+                            </div>
+                        </a>
+                        <a href="https://api.whatsapp.com/send/?phone=2349016500431&text=Join+eMigr8+Community&type=phone_number&app_absent=0"
+                            target="_blank" aria-label="Go to our Whatsapp page">
+                            <div class="social-icon">
+                                <img src="./assets/img/ic_outline-whatsapp.png" alt="whatsapp icon" width="16.64px"
+                                    height="16.64px">
+                            </div>
+                        </a>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+    </footer>
+
+
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+            class="bi bi-arrow-up-short"></i></a>
+
+    <!-- Preloader -->
+    <div id="preloader"></div>
+
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+
+    <!-- Main JS File -->
+    <script src="assets/js/main.js" async></script>
+
 </body>
+
 </html>
