google analytics link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Z9BV2QKDT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-5Z9BV2QKDT');
+  </script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>eMigr8.AI</title>
@@ -25,6 +33,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css?1.1" rel="stylesheet">
+  
 </head>
 
 <body class="index-page">
