--- a/pricing.html
+++ b/pricing.html
@@ -81,12 +81,12 @@
                     publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
                 </stripe-pricing-table>
             </div>
-            <div class="discover">
+            <!-- <div class="discover">
                 <h3>Explore additional plans</h3>
                 <p>Whether you're just exploring or ready to take the next step, we have a plan that fits you.</p>
                 <a href="https://bincom.co.uk/emigr8pricing/" target="_blank" aria-label="See all plans"
                     class="btn-discover">See all plans</a>
-            </div>
+            </div> -->
         </section>
     </main>
 
