added new pricing script

--- a/pricing.html
+++ b/pricing.html
@@ -23,7 +23,7 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/main.css?1.3" rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +71,6 @@
         <section id="pricing" class="pricing section">
 
             <div class="container title title-pricing" data-aos="fade-up">
-              
                 <h2>Unlock Your Potential with Flexible Pricing</h2>
                 <p>Choose the plan that fits your journey, and gain access to exclusive resources</p>
             </div>
@@ -81,12 +80,24 @@
                     publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
                 </stripe-pricing-table>
             </div>
-            <!-- <div class="discover">
+            <div class="discover">
                 <h3>Explore additional plans</h3>
                 <p>Whether you're just exploring or ready to take the next step, we have a plan that fits you.</p>
                 <a href="https://bincom.co.uk/emigr8pricing/" target="_blank" aria-label="See all plans"
                     class="btn-discover">See all plans</a>
-            </div> -->
+            </div>
+            
+            <div class=" specific-package">
+                <h2>TAILORED eMigr8 PACKAGES</h2>
+                <p>Are you interested in a specific eMigr8 Package ?</p>
+                <span class="arrow-down"><i><i class="bi bi-arrow-down"></i></i></span>
+            </div>
+            <div class="script-box">
+                <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+                <stripe-pricing-table pricing-table-id="prctbl_1Qlu6gATkueRmeRzheK8VOM0"
+                    publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
+                </stripe-pricing-table>
+            </div>
         </section>
     </main>
 
