--- a/pricing.html
+++ b/pricing.html
@@ -74,7 +74,7 @@
                 <h2>Unlock Your Potential with Flexible Pricing</h2>
                 <p>Choose the plan that fits your journey, and gain access to exclusive resources</p>
             </div>
-            <div class="script-box">
+            <div>
                 <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
                 <stripe-pricing-table pricing-table-id="prctbl_1QfAvBATkueRmeRz4wJZzF3w"
                     publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
@@ -88,7 +88,7 @@
             </div>
             
             <div class=" specific-package">
-                <h2>TAILORED eMigr8 PACKAGES</h2>
+                <h2>eMigr8 PACKAGES</h2>
                 <p>Are you interested in a specific eMigr8 Package ?</p>
                 <span class="arrow-down"><i><i class="bi bi-arrow-down"></i></i></span>
             </div>
