--- a/pricing.html
+++ b/pricing.html
@@ -92,7 +92,7 @@
                 <p>Are you interested in a specific eMigr8 Package ?</p>
                 <span class="arrow-down"><i><i class="bi bi-arrow-down"></i></i></span>
             </div>
-            <div class="script-box">
+            <div>
                 <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
                 <stripe-pricing-table pricing-table-id="prctbl_1Qlu6gATkueRmeRzheK8VOM0"
                     publishable-key="pk_live_51Qe1d0ATkueRmeRzEEyWgDP987NmKkleTssFJReoIg9glWlQG2l9WOM6KnkLQoUhO9wV0t6ZLu9glJi5zkInV4iU006yxEqoj7">
