New content for eMIgr8 Packages

--- a/pricing.html
+++ b/pricing.html
@@ -84,12 +84,15 @@
                 <h3>Explore additional plans</h3>
                 <p>Whether you're just exploring or ready to take the next step, we have a plan that fits you.</p>
                 <a href="https://bincom.co.uk/emigr8pricing/" target="_blank" aria-label="See all plans"
-                    class="btn-discover">See all plans</a>
+                    class="btn-discover">See more plans</a>
             </div>
             
             <div class=" specific-package">
-                <h2>eMigr8 PACKAGES</h2>
-                <p>Are you interested in a specific eMigr8 Package ?</p>
+                <h2>eMigr8 Packages</h2>
+                <p>We have packages for UK Global Talent Visa (Tech Nation Visa), UK Innovator Founder Visa, US O-1 Visa: Individuals with
+                Extraordinary Ability or Achievement, amongst many other visa options to UK, US, Canada, France, Germany, Australia and
+                other international destinations.</p>
+                <p>Are you interested in a specific eMigr8 package for one of these visa routes ? See some of our packages here</p>
                 <span class="arrow-down"><i><i class="bi bi-arrow-down"></i></i></span>
             </div>
             <div>
