still on content

--- a/pricing.html
+++ b/pricing.html
@@ -89,8 +89,8 @@
             
             <div class=" specific-package">
                 <h2>eMigr8 Packages</h2>
-                <p>We have packages for UK Global Talent Visa (Tech Nation Visa), UK Innovator Founder Visa, US O-1 Visa: Individuals with
-                Extraordinary Ability or Achievement, amongst many other visa options to UK, US, Canada, France, Germany, Australia and
+                <p>We have packages for UK Global Talent Visa (Tech Nation Visa), UK Innovator Founder Visa, UK Skilled Worker Visa, US O1 Visa: Individuals with
+                Extraordinary Ability or Achievement, US EB1, US EB2 NIW, Canada Startup Visa, French Tech Visa, amongst many other visa options to UK, US, Canada, France, Germany, Australia and
                 other international destinations.</p>
                 <p>Are you interested in a specific eMigr8 package for one of these visa routes ? See some of our packages here</p>
                 <span class="arrow-down"><i><i class="bi bi-arrow-down"></i></i></span>
